# WebAppDatosConcepcion

./: .gitignore  .pre-commit-config.yaml  README.md  app.py  dev-setup.sh  docker-compose.yml  utils.py
.github/workflows/: schedule.yml
frontend/: Dockerfile  package-lock.json  package.json  svelte.config.js  tailwind.config.cjs  tsconfig.json  vite.config.js
frontend/src/: app.css  app.html  globals.d.ts
frontend/src/lib/: Container.svelte  Datepicker.svelte  DownloadCSV.svelte  Footer.svelte
frontend/src/lib/monthPicker/: Month.svelte  MonthPicker.svelte
frontend/src/lib/table/: PageButton.svelte  Table.svelte
frontend/src/routes/: +layout.svelte  +page.svelte
scraper/: Dockerfile  contrataciones.py  post_processing.py  pyproject.toml
scraper/data/: contrataciones.csv  contrataciones.parquet.brotli
