[tool.poetry]
name = "concepcion-transparente-scraper"
version = "0.1.0"
description = ""
authors = ["None"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
Scrapy = "^2.6.2"
pydantic = "^1.10.2"
pandas = "^1.4.4"
pyarrow = "^9.0.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
black = "^22.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
